# voting-app

backend/: docker-compose.yaml
backend/faceapp/: Dockerfile  app.py  requirements.txt
backend/votingapp/: Dockerfile
frontend/: settings.gradle.kts
frontend/app/: CMakeLists.txt  build.gradle.kts
frontend/app/src/androidTest/java/diploma/pr/biovote/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/cpp/: wasmedge_lib.cpp
frontend/app/src/main/java/diploma/pr/biovote/: MainActivity.kt  NavigationHost.kt  OnboardingScreen.kt  RegistrationScreen.kt  VotingDetailScreen.kt  WelcomeScreen.kt
frontend/app/src/main/java/diploma/pr/biovote/data/local/: TokenManager.kt
frontend/app/src/main/java/diploma/pr/biovote/data/remote/model/: ApiClient.kt  ApiService.kt  AuthResponse.kt  LoginResponse.kt  RegisterResponse.kt  ServiceApi.kt  VoteRequest.kt
frontend/app/src/main/java/diploma/pr/biovote/data/repository/: AuthRepository.kt
frontend/app/src/main/java/diploma/pr/biovote/ui/auth/: LoginScreen.kt
frontend/app/src/main/java/diploma/pr/biovote/ui/theme/: Color.kt  Theme.kt  Type.kt
frontend/app/src/main/java/diploma/pr/biovote/ui/voting/: VotingListScreen.kt
frontend/app/src/main/java/diploma/pr/biovote/utils/: BioVoteApplication.kt  CameraUtils.kt
frontend/app/src/main/res/values/: strings.xml  themes.xml
frontend/app/src/test/java/diploma/pr/biovote/: ExampleUnitTest.kt
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
